--- a/dmath.tex
+++ b/dmath.tex
@@ -158,7 +158,7 @@ f: E^{n}_{2} \to E_{2}, E_{2} = \{0, 1\}
 \begin{center}
     \begin{tabular}{|c c c c c|c|}
         \hline
-        $x_{1} & x_{2} & ... & x_{n-1} & x_{n}$ & $f(x_{1}, x_{2}, ..., x_{n-1}, x_{n})$  \\
+        $x_{1}$ & $x_{2}$ & ... & $x_{n-1}$ & $x_{n}$ & $f(x_{1}, x_{2}, ..., x_{n-1}, x_{n})$  \\
         \hline
         0 & 0 & ... & 0 & 0 & f(0, 0, ..., 0, 0)  \\
         0 & 0 & ... & 0 & 1 & f(0, 0, ..., 0, 1)  \\
@@ -348,7 +348,7 @@ $$ |A_{1} \cup A_{2} \cup ... \cup A_{n}| = \underset{S \neq \varnothing}{\sum} 
 \]
 
 \noindent
-Сочетанием с повторениями называются сочетания, в которых каждый элемент набора может встречаться несколько раз. Количество сочетаний с повторениями из n по k равно $C^{k}_{n+k−1} = C^{n-1}_{n+k−1}$ . (можно доказать с помощью метода точек и перегородок)
+Сочетанием с повторениями называются сочетания, в которых каждый элемент набора может встречаться несколько раз. Количество сочетаний с повторениями из n по k равно $C^{k}_{n+k-1} = C^{n-1}_{n+K-1}$. (можно доказать с помощью метода точек и перегородок). 
 
 \parag{15. Характеристическая функция и её использование при подсчёте числа элементов множества.}
 Характеристическая функция - это функция, определённая на множестве X, которая указывает на принадлежность элемента x, принадлежащего X, подмножеству A.
