--- a/dmath.tex
+++ b/dmath.tex
@@ -687,9 +687,9 @@ $$ где {n \choose k} - \textit{биномальный коэфиициент.
 Обычно отношение строгого порядка (линейного или частичного) обозначается знаком $\prec$, а отношение нестрогого порядка - знаком $\preceq$.
 
 \parag{36. Отношение непосредственного следования}
-\textit{Отношение непосредственного следования} - это отношение порядка $\prec$, такое что если $x \prec y$, то $\nexists z: x \prec z \land z \prec y$. Кратко записывается так:
+\textit{Отношение непосредственного следования} - это отношение порядка $\prec$, такое что если $x < y$, то $\nexists z: x < z \land z < y$. Кратко записывается так:
 \[
-    \prec = \{(x, y)\ |\ (x \prec y) \land \neg(\exists z: x \prec z \land z \prec y)\}
+    \prec = \{(x, y)\ |\ (x < y) \land \neg(\exists z: x < z \land z < y)\}
 \]
 
 \parag{37. Изоморфные отношения частичного порядка}
