добавлено немного доказательств

--- a/dmath.tex
+++ b/dmath.tex
@@ -695,4 +695,248 @@ $$ где {n \choose k} - \textit{биномальный коэфиициент.
 \parag{37. Изоморфные отношения частичного порядка}
 Отношения частичного порядка $R_{1} \subseteq A \times A$ и $R_{2} \subseteq B \times B$ называются изоморфными, если существует такая биекция $f : A \rightarrow B$, что для $\forall x, y$ $xR_{1}y \iff f(x)R_{2}f(y)$
 
+\vskip 2em
+\section{Теоремы с доказательствами}
+
+\parag{1. Разложение в ДНФ булевой функции.}
+\textbf{Теорема:} Любая булева функция представима в виде дизъюнкции конъюнктов её переменных и может быть записана так:
+\[
+    f(x_{1}, ..., x_{n}) = \underset{\{(\sigma_{1}, ..., \sigma_{n})\ |\ f(\sigma_{1}, ..., \sigma_{n}) = 1\}}{\bigvee} x_{1}^{\sigma_{1}} \wedge x_{2}^{\sigma_{2}} \wedge ... \wedge x_{n}^{\sigma_{n}}
+\]
+\textbf{Замечание:} запись $x^{\sigma}$ означает буквально:
+\[
+    x^{\sigma} = \left\{
+                    \begin{array}{ll}
+                        x, \sigma = 1\\
+                        \bar x, \sigma = 0
+                    \end{array}
+                \right.
+\]
+
+\vskip 1em
+
+\noindent
+Для того, чтобы доказать данную теорему, докажем теорему о разложении булевой функции по k переменным.
+
+\noindent
+\textbf{Теорема:} о разложении булевой функции по переменным.
+\[
+    f(x_{1}, ..., x_{m}, x_{m+1}, ..., x_{n}) = \underset{(\sigma_{1},  ..., \sigma_{m})}{\bigvee} x_{1}^{\sigma_{1}}\wedge...\wedge x_{m}^{\sigma_{m}} \wedge f(\sigma_{1}, ..., \sigma_{m}, x_{m+1}, ..., x_{n})
+\]
+Причем дизъюнкция берется по всем возможным наборам $(\sigma_{1}, ..., \sigma_{m}) \in \{0, 1\}^{m}$.
+
+\noindent
+\textbf{Доказательство:} Рассмотрим значение формулы на наборе значений $(a_{1}, ..., a_{n})$. Имеем:
+\[
+    \Big(\underset{(\sigma_{1},  ..., \sigma_{m})}{\bigvee} x_{1}^{\sigma_{1}}\wedge...\wedge x_{m}^{\sigma_{m}} \wedge f(\sigma_{1}, ..., \sigma_{m}, x_{m+1}, ..., x_{n})\Big)(a_{1}, ..., a_{n}) = 
+\]
+\[
+    = \underset{(\sigma_{1},  ..., \sigma_{m})}{\bigvee} a_{1}^{\sigma_{1}}\wedge...\wedge a_{m}^{\sigma_{m}} \wedge f(\sigma_{1}, ..., \sigma_{m}, a_{m+1}, ..., a_{n})
+\]
+Достаточно очевидно, что $a^{\sigma} = 1$, если $a = \sigma$, иначе $a^{\sigma} = 0$:
+
+\begin{center}
+    \begin{tabular}{|c|c|c|}
+        \hline
+        a & $\sigma$ & $a^{\sigma}$  \\
+        \hline
+        0 & 0 & 1  \\
+         \hline
+        0 & 1 & 0  \\
+        \hline
+        1 & 0 & 0 \\
+        \hline
+        1 & 1 & 1 \\
+        \hline
+    \end{tabular}
+\end{center}
+
+\noindent
+Следовательно, все конъюнкции, в которых $\exists i: a_{i} \neq \sigma_{i}$, равны 0 и их можно опустить, поэтому остается только одно слагаемое, для которого $\forall i \in \{1, ..., n\}\ (a_{i} = \sigma_{i})$. Следовательно:
+\[
+    \underset{(\sigma_{1},  ..., \sigma_{m})}{\bigvee} a_{1}^{\sigma_{1}}\wedge...\wedge a_{m}^{\sigma_{m}} \wedge f(\sigma_{1}, ..., \sigma_{m}, a_{m+1}, ..., a_{n}) = 
+\]
+\[
+    = a_{1}^{a_{1}}\wedge...\wedge a_{m}^{a_{m}} \wedge f(a_{1}, ..., a_{m}, a_{m+1}, ..., a_{n}) = f(a_{1}, a_{2}, ..., a_{n})
+\]
+$\blacksquare$
+
+Веренмся к первоначальной задаче. Достаточно очевидно, что искомое разложение в ДНФ - это разложение функции по всем переменным, m = n. (При таком разложении полностью исчезает часть с f(...)).
+
+\vskip 5em
+\parag{2. Обощенный закон Моргана.}
+\[ \neg(x_{1} \vee x_{2} \vee ... \vee x_{n}) = \neg x_{1} \wedge \neg x_{2} \wedge ... \wedge \neg x_{n} \]
+\[ \neg(x_{1} \wedge x_{2} \wedge ... \wedge x_{n}) = \neg x_{1} \vee \neg x_{2} \vee ... \vee \neg x_{n} \]
+
+\noindent
+Доказательство (для первой формулы, анналогично для второй):
+
+\begin{enumerate}
+    \item База: Выражение верно для n = 2: $\neg(x_{1}  \vee x_{2}) = \neg x_{1} \wedge \neg x_{2}$
+    \item Предположение: Пусть верно для n = k - 1: \[ \neg(x_{1} \vee x_{2} \vee ... \vee x_{k - 1}) = \neg x_{1} \wedge \neg x_{2} \wedge ... \wedge \neg x_{k - 1} \]
+    \item Шаг: проверим для n = k. Сделаем замену $y = x_{1} \vee x_{2} \vee ... \vee x_{k - 1}$
+        $$ \neg(x_{1} \vee x_{2} \vee ... \vee x_{k}) = \neg(y \vee x_{k}) = \neg y \wedge \neg x_{k} = \neg (x_{1} \vee x_{2} \vee ... \vee x_{k - 1}) \wedge \neg x_{k} = $$
+        $$= \neg x_{1} \wedge \neg x_{2} \wedge ... \wedge \neg x_{k - 1} \wedge \neg x_{k}$$
+        
+        (Последний переход выполнен по предположению индукции)
+\end{enumerate}  
+
+\parag{3. Формула включений и исключений.}
+\textbf{Теорема:}
+\[
+    \Big|\underset{i = 1}{\overset{n}{\bigcup}}A_{i}\ \ \Big| =
+    \underset{i=1}{\overset{n}{\sum}}|A_{i}| -
+    \underset{1 \leqslant i < j \leqslant n}{\sum} |A_{i} \cap A_{j}|+
+    ... +
+    (-1)^{n-1} |A_{1} \cap ... \cap A_{n}|
+\]
+Доказательство (по индукции):
+
+1) База индукции: докажите по диаграммам Эйлера-Венна для n = 2, 3
+
+2) Предположение индукции: пусть верно для n - 1
+\[
+    \Big|\underset{i = 1}{\overset{n - 1}{\bigcup}}A_{i}\ \ \Big| =
+    \underset{i=1}{\overset{n - 1}{\sum}}|A_{i}| -
+    \underset{1 \leqslant i < j \leqslant n - 1}{\sum} |A_{i} \cap A_{j}|+
+    ... +
+    (-1)^{n-2} |A_{1} \cap ... \cap A_{n-1}|
+\]
+
+Дальше, нужно заметить, что из-за того, что операция пересечения ассоциативна по операции объединения, то верно вот что:
+
+\[
+    \Big(\overset{n-1}{\underset{i=1}{\bigcup}}A_{i}\Big) \cap A_{n} =
+    \overset{n-1}{\underset{i=1}{\bigcup}}(A_{i} \cap A_{n})
+\]
+
+Кроме того, надо заметить, что для штуки, которую мы получили, верно предположение индукции (мы можем её разложить):
+
+\[
+    \Big|\underset{i = 1}{\overset{n - 1}{\bigcup}}(A_{i} \cap A_{n})\ \ \Big| =
+    \underset{i=1}{\overset{n - 1}{\sum}}|A_{i} \cap A_{n}| -
+    \underset{1 \leqslant i < j \leqslant n - 1}{\sum} |A_{i} \cap A_{j}|+
+    ... +
+    (-1)^{n-2} |A_{1} \cap ... \cap A_{n-1} \cap A_{n}|
+\]
+
+3) А теперь, зная все формулы выше, мы делаем шаг индукции:
+
+\[
+    \Big|\underset{i = 1}{\overset{n}{\bigcup}}A_{i}\ \ \Big| =\
+    \Big|\Big(\underset{i = 1}{\overset{n - 1}{\bigcup}}A_{i}\Big)\cup A_{n}\ \ \Big|
+\]
+
+По формуле для n = 2 раскрываем эту скобку:
+\[
+    \Big|\Big(\underset{i = 1}{\overset{n - 1}{\bigcup}}A_{i}\Big)\cup A_{n}\ \ \Big| =
+    \Big|\underset{i = 1}{\overset{n-1}{\bigcup}}A_{i}\ \ \Big| +
+    |A_{n}| -\ 
+    \Big|\Big(\overset{n-1}{\underset{i=1}{\bigcup}}A_{i}\Big) \cap A_{n}\ \Big| =
+\]
+\[
+    = \Big|\underset{i = 1}{\overset{n-1}{\bigcup}}A_{i}\ \ \Big| +
+    |A_{n}| -\ 
+    \Big|\overset{n-1}{\underset{i=1}{\bigcup}}(A_{i} \cap A_{n})\ \Big| =
+\]
+\[
+    \Bigg( \underset{i=1}{\overset{n - 1}{\sum}}|A_{i}| -
+    \underset{1 \leqslant i < j \leqslant n - 1}{\sum} |A_{i} \cap A_{j}|+
+    ... +
+    (-1)^{n-2} |A_{1} \cap ... \cap A_{n-1}| \Bigg) + |A_{n}| -
+\]
+\[
+    - \Bigg( \underset{i=1}{\overset{n - 1}{\sum}}|A_{i} \cap A_{n}| -
+    \underset{1 \leqslant i < j \leqslant n - 1}{\sum} |A_{i} \cap A_{j}|+
+    ... +
+    (-1)^{n-2} |A_{1} \cap ... \cap A_{n-1} \cap A_{n}| \Bigg) =
+\]
+\[
+    \Big(\underset{i=1}{\overset{n - 1}{\sum}}|A_{i}| + |A_{n}| \Big) -
+    \Bigg( \underset{1 \leqslant i < j \leqslant n - 1}{\sum} |A_{i} \cap A_{j}| +  \underset{i=1}{\overset{n - 1}{\sum}}|A_{i} \cap A_{n}| \Bigg) + ... -
+\]
+\[
+    -(-1)^{n-2} |A_{1} \cap ... \cap A_{n-1} \cap A_{n}| = \underset{i=1}{\overset{n}{\sum}}|A_{i}| -
+    \underset{1 \leqslant i < j \leqslant n}{\sum} |A_{i} \cap A_{j}|+
+    ... +
+    (-1)^{n-1} |A_{1} \cap ... \cap A_{n}|
+\]
+$\blacksquare$
+
+\parag{4.Число k-элементных подмножеств n-элементного множества есть ${n \choose k}$}
+Будем выбирать элементы множества по очереди. Первый элемент можно выбрать n способами, второй (n - 1) способами (годятся все, кроме первого, уже выбранного), третьий (n - 2) способами, и т.д пока не выберем k элементов. По правилу произведения всего способов выбрать таким образом есть
+\[
+    n \times (n - 1) \times (n - 2) \times ... \times (n - k + 1)
+\]
+способ. Однако так мы посчитали не число возможных подмножеств, а число упорядоченных списков. Получается, нужно не обращать внимания на позицию элемента в списке. Всего можно составить k! таких упорядоченных списков из k элементов (k! - количество способов переставить элементы в списке). Значит количество способов выбрать k-элементное подмножество из n-элементного множества равно 
+\[
+    \frac{n(n-1)(n-2)\cdot...\cdot(n-k+1)}{k!} =
+    \frac{n(n-1)(n-2)\cdot...\cdot2\cdot1}{(n-k)(n-k-1)\cdot...\cdot2\cdot1} \times \frac{1}{k!} = 
+\]
+\[
+    = \frac{n!}{(n-k)!} \times \frac{1}{k!} = \frac{n!}{(n-k)!\cdot k!} = {n \choose k}
+\]
+$\blacksquare$
+
+\parag{5. Бином Ньютона. Формула для биномиальных коэффициентов.}
+======================
+
+\parag{6. Основные свойства треугольника Паскаля: симметричность строк, возрастание чисел в первой половине строки.}
+1) ${n \choose k} = {n - k \choose k}$, следовательно все строки треугольника Паскаля симметричны. (доказывается раскрытием обоих частей).
+
+\noindent
+2) Решить неравенство ${n \choose k} < {n \choose k + 1}$. Получаем, что оно выполняется только при $k \leqslant \frac{n}{2}$. Из симметричности получаем возрастание в первой половине строки и убывание во второй половине строки.
+
+\parag{7. Основные свойства треугольника Паскаля: формула для суммы чисел в строке, нижняя оценка на центральный коэффициент}
+==================== (может, 2n + 1?)
+
+\parag{8. Число решений уравнения $x_{1} + x_{2} + ... + x_{k} = n$ в неотрицательных целых числах. (Задача Муавра.)}
+Есть ещё одна задача, где естественным (но не вполне очевидным) образом возникают числа сочетаний. Сколько решений имеет уравнение $x_{1} + x_{2} + ... + x_{k} = n$ в целых неотрицательных числах? Если это недостаточно наглядно, можно спросить иначе: есть k различных человек и n одинаковых монет. Сколькими способами можно раздать этим людям эти монеты? Каждый такой способ определяется тем, сколько монет получил каждый (но какие именно монеты — не учитывается, все монеты одинаковые). Это целые неотрицательные числа (допускаются варианты, где некоторые получили по нулю монет). Как найти это число? Представим себе, что наши n монет разложены в ряд. Прежде чем раздавать эти монеты, разделим их на k групп перегородками, и договоримся, кому идёт самая левая группа, кому вторая слева и т.д. Заметим, что мы допускаем случай, когда две перегородки оказываются рядом — это значит просто, что человеку, которому была назначена группа между ними, не повезло и в этом раскладе ему ни одной монеты не достанется. Каждому варианту раздачи (каждому решению уравнения в неотрицательных числах) соответствует последовательность из n монет и k - 1 перегородок. (Число перегородок на единицу меньше числа группы: первая группа стоит слева от первой перегородки, а последняя - справа от последней.) Наоборот, каждой последовательности из n монет и k - 1 перегородок соответствует некоторый способ раздачи монет. Поэтому надо подсчитать число способов расставить перегородки. А это совсем просто - каждый содержащее n монет и k - 1 перегородок. Это количество, как мы знаем, равно ${n + k - 1 \choose n}$ или ${n + k - 1 \choose k - 1}$.
+
+\parag{9. Основная теорема об отношениях эквивалентности (классы эквивалентности на множестве A — в точности разбиения множества A на подмножества)}
+\textbf{Теорема:} Любое отношение R, являющееся отношением эквивалентности на множестве A, делит A на классы эквивалентности - непересекающиеся подмножества множества X, при этом любые два элемента одного класса находятся в отношении R, а любые два элемента разных классов не находятся в отношении R.
+
+\vskip 1em
+
+\noindent
+\textit{Доказательство:} Для каждого $x \in A$ рассмотрим множество тех y, для которых верно $R(x, y)$.
+Обозначим его через [x]. Его можно было бы назвать «классом эквивалентности элемента x» - собственно говоря, так его и называют, но само по себе это название не гарантирует разбиения на классы, это ещё надо доказывать. А именно, надодоказать, что
+\begin{enumerate}
+    \item объединение всех множеств вида [x] совпадает с множеством A;
+    \item два множества [x] и [y] либо не пересекаются, либо совпадают;
+    \item наконец, надо ещё доказать, что [x] = [y] в том и только том случае, когда R(x, y), то есть R совпадает с отношением «принадлежать одному классу».
+\end{enumerate}
+По порядку:
+\begin{enumerate}
+    \item В силу рефлексивности множество [x] содержит x в качестве своего элемента: $x \in [x]$, поскольку R(x, x). Отсюда следует, что объединение всех этих множеств совпадает с A. (Выйти за пределы A они не могут, так как мы рассматриваем отношение на множестве A и элементы множества A.)
+    \item Пусть для двух элементов $x, y \in A$ их классы [x] и [y] пересеклись. Это означает, что есть такой $z \in A$, что R(x, z) и R(y, z). Симметричность даёт R(z, y), после чего мы применяем транзитивность к R(x, z) и R(z, y) и заключаем, что R(x, y). Выведем отсюда, что [x] = [y]. В самом деле, если произвольный элемент t принадлежит [y], то R(y, t). Вспоминая, что R(x, y)и применяя транзитивность, получаем R(x, t), то есть $t \in [x]$. Мы доказали, таким образом, что $[y] \subseteq [x]$. Аналогично доказывается, что $[x] \subseteq [y]$, так что [x] = [y].
+    \item Если для каких-то x, y верно R(x, y), то x и y оба лежат в одном классе, а именно, в [x]. Обратно, если x и y лежат в каком-то [z], то по определению имеем R(z, x) и R(z, y), симметричность даёт R(x, z) и после этого транзитивность даёт R(x, y).
+\end{enumerate}
+
+\parag{10. Нижняя оценка числа связных компонент в неориентированном графе.}
+\textbf{Теорема:} Число компонент связности в графе не меньше, чем разность количества вершин и ребер.
+
+\vskip 1em
+
+\noindent
+\textit{Доказательство (по индукции):}
+
+1) База индукции (n = 1): граф состоит из 1 вершины, которая является единственной компонентой связности в графе. Разность количества вершин(1) и ребер(0) равно 1, но компонента связности одна. База доказана.
+
+2) Шаг индукции $(n \mapsto n + 1)$: пусть для всех графов на n вершинах выполняется эта оценка, добавим еще одну вершину и рассмотрим случай связи, при котором сумма количества компонент связности и количество ребер наименьшая: выберем такой граф на n вершинах (C - количество компонент связности в этом графе, E - количество ребер в этом графе), чтобы в нем эта сумма была наименьшей и добавим к нему еще одну вершину. Заметим, что если связать новую вершину хотя бы одним ребром с k уже существовавшими компонентами связности, то количество ребер увеличится, как минимум, на k, а компонент связности станет на k - 1 меньше, чем в графе на n вершинах. (Если не связывать, то станет на одну больше, так как будет еще одна компонента связности, если связать компоненты связности, то они станут одной компонентой связности, то есть количество уменьшится на единицу.) Так как нужна наименьшая сумма, то нужно использовать, как можно меньше ребер: будем соединять вершину 1 ребром с каждой из k существовавших компонентов связности - ребер станет на k больше, а количество компонентов связности уменьшится на k - 1, то есть сумма компонентов связности и ребер нового графа будет такой: (C - (k - 1)) + (E + k) = C + E + 1. Но C + E + 1 > V + 1 из C + E > V. Значит для n + 1 верна оценка.
+
+\noindent
+$\blacksquare$
+
+\parag{11. Доказательство критерия 2-раскрашиваемости неориентированного графа.}
+\textbf{Формулировка:} Раскраска вершин графа в два цвета так, чтобы рёбра соединяли вершины разных цветов, возможна когда и только тогда, когда в графе нет циклов нечётной длины.
+
+\vskip 1em
+
+\noindent
+\textit{Доказательство:} Если в графе есть цикл нечётной длины, то его нельзя раскрасить: соседние вершины должны быть противоположных цветов, и дойдя до конца, мы получим противоречие. Чтобы доказать обратное, предположим, что циклов нечётной длины нет. Выберем некоторую вершину $a$ и не ограничивая общности окрасим её в цвет 1. Для любой другой вершины $b$ посмотрим, сколько рёбер в пути от $a$ к $b$. Заметим, что если есть путь $a \rightarrow b$ с чётным числом рёбер, а также другой путь $a \rightarrow b$ с нечётным числом рёбер, то есть цикл с нечётным числом рёбер (из $a$ в $b$ по одному пути и из $b$ в $a$ - по другому). Это противоречит предположению. Таким образом, мы поделили вершины графа на два типа: соединённые с $a$ путями чётной длины и путями нечётной длины. Если какая-то вершина соединена с $a$ путями чётной длины, то её соседи соединены путями нечётной длины (один такой путь - через соседа - заведомо есть, а тогда и все пути имеют нечётную длину). Раскрасим те, что на чётном расстоянии в то же цвет, что и $a$, а те, что на нечётном - в другой. Требуемая раскраска одной компоненты связности построена. Остальные можно раскрашивать совершенно независимо от этой, так как нет ребёр, которые могли бы помешать.
+
+\noindent
+$\blacksquare$
+
 \end{document}
