5ая и 7ая теоремы на месте

--- a/dmath.tex
+++ b/dmath.tex
@@ -879,16 +879,130 @@ $\blacksquare$
 $\blacksquare$
 
 \parag{5. Бином Ньютона. Формула для биномиальных коэффициентов.}
-======================
+\textbf{Теорема:}
+\[
+    (a + b)^{n} = \overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n - k}b^{k}
+\]
+\textit{Доказательство (по индукции):}
+
+1) База индукции: n = 1
+\[
+    (a + b)^{1} = a + b = a^{1}b^{0} + a^{0}b^{1} = {1 \choose 0} a^{1}b^{0} + {1 \choose 1}a^{0}b^{1} = 
+    \underset{k=0}{\overset{1}{\sum}} {1 \choose k} a^{1-k}b^{k}
+\]
+
+2) Пусть верно для n:
+\[
+    (a + b)^{n} = \overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n- k}b^{k}
+\]
+
+3) Докажем для n + 1:
+\[
+    (a + b)^{n+1} = (a + b)(a + b)^{n} = (a + b) \Big(\overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n- k}b^{k}\Big) = 
+\]
+\[
+    a\times \Big( \overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n- k}b^{k}\Big) + b \times \Big(\overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n- k}b^{k}\Big) = 
+\]
+\[
+    = \Big( \overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n - k + 1}b^{k}\Big) + \Big( \overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n-k}b^{k + 1}\Big)
+\]
+Вынесем из первой скобки одно слагаемое при k = 0, а из второй скобки слагаемое при k = n:
+\[
+    \Big( \overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n - k + 1}b^{k}\Big) + \Big( \overset{n}{\underset{k=0}{\sum}} {n \choose k} a^{n-k}b^{k + 1}\Big) =
+\]
+\[
+    = a^{n+1} + \Big( \overset{n}{\underset{k=1}{\sum}} {n \choose k} a^{n - k + 1}b^{k}\Big) + b^{n+1} + \Big( \overset{n-1}{\underset{k=0}{\sum}} {n \choose k} a^{n-k}b^{k + 1}\Big)
+\]
+Сделаем сдвиг в сумме во второй скобке. Будем проходиться не от 0 до n - 1, а от 1 до n. Тогда, чтобы сумма осталась неизменной нужно из всех k под знаком суммы отнять единчку. Получаем:
+\[
+    a^{n+1} + \Big( \overset{n}{\underset{k=1}{\sum}} {n \choose k} a^{n - k + 1}b^{k}\Big) + b^{n+1} + \Big( \overset{n-1}{\underset{k=0}{\sum}} {n \choose k} a^{n-k}b^{k + 1}\Big) =
+\]
+\[
+    = a^{n+1} + \Big( \overset{n}{\underset{k=1}{\sum}} {n \choose k} a^{n - k + 1}b^{k}\Big) + b^{n+1} + \Big( \overset{n}{\underset{k=1}{\sum}} {n \choose k - 1} a^{n-(k-1)}b^{k}\Big) = 
+\]
+\[
+    = a^{n+1} + b^{n+1} + \Big( \overset{n}{\underset{k=1}{\sum}} {n \choose k} a^{n - k + 1}b^{k}\Big) + \Big( \overset{n}{\underset{k=1}{\sum}} {n \choose k - 1} a^{n-k+1}b^{k}\Big) =
+\]
+\[
+    = a^{n+1} + b^{n+1} +  \overset{n}{\underset{k=1}{\sum}} \Big({n \choose k} a^{n - k + 1}b^{k} + {n \choose k - 1} a^{n-k+1}b^{k}\Big) =
+\]
+\[
+    =  a^{n+1} + b^{n+1} +  \overset{n}{\underset{k=1}{\sum}} \Big( a^{n - k + 1}b^{k} \big( {n \choose k - 1} + {n \choose k} \big)\Big) =
+\]
+\[
+    =  a^{n+1} + b^{n+1} +  \overset{n}{\underset{k=1}{\sum}} \Big( a^{n - k + 1}b^{k} \times {n + 1 \choose k}\Big) =
+\]
+\[
+    = a^{n+1} + \overset{n}{\underset{k=1}{\sum}} {n + 1 \choose k} a^{n - k + 1}b^{k} + b^{n+1} = 
+    \overset{n + 1}{\underset{k=0}{\sum}} {n + 1 \choose k} a^{(n+1)- k}b^{k}
+\]
+$\blacksquare$
 
 \parag{6. Основные свойства треугольника Паскаля: симметричность строк, возрастание чисел в первой половине строки.}
-1) ${n \choose k} = {n - k \choose k}$, следовательно все строки треугольника Паскаля симметричны. (доказывается раскрытием обоих частей).
+1) ${n \choose k} = {n \choose n - k}$, следовательно все строки треугольника Паскаля симметричны. (доказывается раскрытием обоих частей).
 
 \noindent
 2) Решить неравенство ${n \choose k} < {n \choose k + 1}$. Получаем, что оно выполняется только при $k \leqslant \frac{n}{2}$. Из симметричности получаем возрастание в первой половине строки и убывание во второй половине строки.
 
 \parag{7. Основные свойства треугольника Паскаля: формула для суммы чисел в строке, нижняя оценка на центральный коэффициент}
-==================== (может, 2n + 1?)
+\textbf{Теорема 1:} Сумма чисел в n-ой строке треугольника Паскаля = $2^{n}$.
+\vskip 1em
+
+\noindent
+\textit{Доказательство:}
+Вспомним, что в n-ой строке треугольника Паскаля лежат числа
+\[
+    {n \choose 0} + {n \choose 1} + ... + {n \choose n} =
+    {n \choose 0} 1^{0}1^{n - 0} + {n \choose 1} 1^{1}1^{n - 1} + ... + {n \choose n} 1^{n}1^{n - n} =
+\]
+\[
+    = \underset{k=0}{\overset{n}{\sum}} {n \choose k} 1^{n -k}1^{k} =
+    (1 + 1)^{n} = 2^{n}
+\]
+
+\vskip 2em
+\noindent
+\textbf{Теорема 2:} Нижняя оценка на центральный коэффициент.
+\[
+    {2n \choose n} \geqslant \frac{2^{2n}}{2n+1}
+\]
+
+\vskip 1em
+\noindent
+\textit{Доказательство:}
+
+1) Рассмотрим сумму 2n-ой строки треугольника Паскаля:
+\[
+    {2n \choose 0} + {2n \choose 1} + ... + {2n \choose 2n} = 2^{2n}
+\]
+
+2) Из возрастания биномальных коэффициентов следует, что:
+\[
+    {2n \choose n} \geqslant {2n \choose k}, \forall k \in \{1, 2, ..., 2n\} 
+\]
+
+3) Следовательно:
+\[
+    \underbrace{{2n \choose n} + ... + {2n \choose n}}_{2n + 1} \geqslant {2n \choose 0} + {2n \choose 1} + ... + {2n \choose 2n}
+\]
+
+4) Тогда:
+\[
+    (2n + 1) {2n \choose n} \geqslant {2n \choose 0} + {2n \choose 1} + ... + {2n \choose 2n}
+\]
+
+5) Получаем:
+\[
+    (2n + 1) {2n \choose n} \geqslant 2^{2n}
+\]
+
+6) И наконец:
+\[
+    {2n \choose n} \geqslant \frac{2^{2n}}{2n + 1}
+\]
+
+\noindent
+$\blacksquare$
 
 \parag{8. Число решений уравнения $x_{1} + x_{2} + ... + x_{k} = n$ в неотрицательных целых числах. (Задача Муавра.)}
 Есть ещё одна задача, где естественным (но не вполне очевидным) образом возникают числа сочетаний. Сколько решений имеет уравнение $x_{1} + x_{2} + ... + x_{k} = n$ в целых неотрицательных числах? Если это недостаточно наглядно, можно спросить иначе: есть k различных человек и n одинаковых монет. Сколькими способами можно раздать этим людям эти монеты? Каждый такой способ определяется тем, сколько монет получил каждый (но какие именно монеты — не учитывается, все монеты одинаковые). Это целые неотрицательные числа (допускаются варианты, где некоторые получили по нулю монет). Как найти это число? Представим себе, что наши n монет разложены в ряд. Прежде чем раздавать эти монеты, разделим их на k групп перегородками, и договоримся, кому идёт самая левая группа, кому вторая слева и т.д. Заметим, что мы допускаем случай, когда две перегородки оказываются рядом — это значит просто, что человеку, которому была назначена группа между ними, не повезло и в этом раскладе ему ни одной монеты не достанется. Каждому варианту раздачи (каждому решению уравнения в неотрицательных числах) соответствует последовательность из n монет и k - 1 перегородок. (Число перегородок на единицу меньше числа группы: первая группа стоит слева от первой перегородки, а последняя - справа от последней.) Наоборот, каждой последовательности из n монет и k - 1 перегородок соответствует некоторый способ раздачи монет. Поэтому надо подсчитать число способов расставить перегородки. А это совсем просто - каждый содержащее n монет и k - 1 перегородок. Это количество, как мы знаем, равно ${n + k - 1 \choose n}$ или ${n + k - 1 \choose k - 1}$.
