--- a/dmath.tex
+++ b/dmath.tex
@@ -406,11 +406,11 @@ $$ где {n \choose k} - \textit{биномальный коэфиициент.
 \includegraphics[width=\textwidth]{images/pascal_traingle.png}
 \vspace{30px}
 
-Пусть T (n, k) - k-й элемент n-й строки. Свойства:
+Пусть T (n, k) - k-й в нумерации с нуля элемент n-й строки. Свойства:
 \begin{itemize}
     \item $T(n, k) = {n \choose k}$
     \item Симметричность строк: T(n, k) = T(n, n - k), n - строка, k - столбец.
-    \item Возрастание чисел в первой половине строки: $T(n, i) < T (n, i + 1), 0 \leqslant i \leqslant n/2, i \in Z$
+    \item Возрастание чисел в первой половине строки: $T(n, i) < T (n, i + 1), 0 \leqslant i < n/2, i \in Z$
     \item $\sum_{k=0}^{n} T(n, k) = 2^n$
     \item $\sum_{k=0}^{n} (-1)^k T(n, k) = 0$
 \end{itemize}
@@ -536,7 +536,7 @@ $$ где {n \choose k} - \textit{биномальный коэфиициент.
 \textit{Простой путь} - путь, такой что в нем все вершины различны.
 
 \noindent
-\textit{Цикл} - путь, такой что $v_{1} = v_{2}$
+\textit{Цикл} - путь, такой что $v_{1} = v_{n}$
 
 \noindent
 \textit{Простой цикл} - цикл, все вершины которого, кроме первой и последней различны.
@@ -570,17 +570,17 @@ $$ где {n \choose k} - \textit{биномальный коэфиициент.
 Теорема. 2 - раскраска описанного типа возможна тогда и только тогда, когда в графе нет циклов нечётной длины.
 
 \parag{29. Двудольные графы. Двудольные и двураскрашиваемые графы.}
-\textit{2-раскрашиваемые графы} - это графы, которые можно правильно раскрасить в 2 цвета.
+Граф G(V, E) называется \textit{двудольным}, если множество V может быть разбито на два непересекающихся множества $V_{1}$ и $V_{2}$ ($V_{1} \cup V_{2} = V, V_{1} \cap V_{2} = \varnothing$), причем всякое ребро из E инцидентно вершине из $V_{1}$ и вершине из $V_{2}$ (соединяет вершину из $V_{1}$ с вершиной из $V_{2}$). Множества $V_{1}$ и $V_{2}$ называются \textit{долями} двудольного графа.
 
 \noindent
-Граф G(V, E) называется \textit{двудольным}, если множество V может быть разбито на два непересекающихся множества $V_{1}$ и $V_{2}$ ($V_{1} \cup V_{2} = V, V_{1} \cap V_{2} = \varnothing$), причем всякое ребро из E инцидентно вершине из $V_{1}$ и вершине из $V_{2}$ (соединяет вершину из $V_{1}$ с вершиной из $V_{2}$). Множества $V_{1}$ и $V_{2}$ называются \textit{долями} двудольного графа.
+\textit{2-раскрашиваемые графы} - это графы, которые можно правильно раскрасить в 2 цвета. Граф является 2-раскрашиваемым тогда и только тогда, когда является двудольным.
 
 \parag{30. Подграфы. Изоморфизм графов. Клики и независимые множества.}
 Граф $G'(V', E')$ называется \textit{подграфом} графа G(V, E), если $V' \subset V\ \&\ E' \subset E$.
 
 \noindent
 \textit{Изоморфизм графов.}
-Говорят, что два графа, $G_{1}(V_{1}, E_{1})$ и $G_{2}(V_{2}, E_{2})$, \textit{изоморфны}, если существует изоморфизм $h: V_{1} \rightarrow V_{2}$, такой что две вершины $u$ и $v$ графа $G_{1}$ смежны тогда и только тогда, когда вершины $h(u)$ и $h(v)$ смежны в графе $G_{2}$.
+Говорят, что два графа, $G_{1}(V_{1}, E_{1})$ и $G_{2}(V_{2}, E_{2})$, \textit{изоморфны}, если существует биекция $h: V_{1} \rightarrow V_{2}$, такая что две вершины $u$ и $v$ графа $G_{1}$ смежны тогда и только тогда, когда вершины $h(u)$ и $h(v)$ смежны в графе $G_{2}$.
 
 
 \noindent
@@ -815,7 +815,7 @@ $\blacksquare$
 \[
     \Big|\underset{i = 1}{\overset{n - 1}{\bigcup}}(A_{i} \cap A_{n})\ \ \Big| =
     \underset{i=1}{\overset{n - 1}{\sum}}|A_{i} \cap A_{n}| -
-    \underset{1 \leqslant i < j \leqslant n - 1}{\sum} |A_{i} \cap A_{j}|+
+    \underset{1 \leqslant i < j \leqslant n - 1}{\sum} |A_{i} \cap A_{j} \cap A_{n}|+
     ... +
     (-1)^{n-2} |A_{1} \cap ... \cap A_{n-1} \cap A_{n}|
 \]
@@ -1052,5 +1052,35 @@ $\blacksquare$
 
 \noindent
 $\blacksquare$
+
+\parag{12. Если G — минимально связный граф (удаление любого ребра приводит к несвязности), то G не содержит простых циклов длины больше двух}
+Пусть A = (удаление любого ребра G приводит к несвязности), B = ( G не содержит простых циклов длины больше двух). Тогда доказать $A \rightarrow B$ есть то же самое, что доказать $\bar B \rightarrow \bar A$ (по принципу контрапозиции). Докажем $\bar B \rightarrow \bar A$.
+
+\noindent
+\textbf{Теорема:} Если G содержит простой цикл длины больше двух, то G - не минимально связный граф.
+
+\noindent
+===========Coming soon=============
+
+\parag{13.}
+===========Coming soon=============
+
+\parag{14.}
+===========Coming soon=============
+
+\parag{15.}
+===========Coming soon=============
+
+\parag{16.}
+===========Coming soon=============
+
+\parag{17.Критерий обратимости остатка (вычета) по модулю N.}
+\textbf{Теорема:} Число $x$ обратимо по модулю $n$ тогда и только тогда, когда НОД($x$, $n$) = 1.
+
+\noindent
+===========Coming soon=============
+
+\parag{18.}
+===========Coming soon=============
 
 \end{document}
