--- a/dmath.tex
+++ b/dmath.tex
@@ -1080,7 +1080,57 @@ $\blacksquare$
 \noindent
 ===========Coming soon=============
 
-\parag{18.}
-===========Coming soon=============
+\parag{18. Малая теорема Ферма.}
+\textbf{Теорема:} Если $p$ — простое число и $a$ — целое число, не делящееся на $p$, то $a^{p-1} \equiv 1\ (mod\ p)$.
+
+\vskip 1em
+\noindent
+\textit{Доказательство:}
+
+\begin{enumerate}
+    \item Пусть $f(x) = x^{p}$. Докажем, что $\forall x\ f(x) = x\ (mod\ p)$.
+    \item Докажем это: 
+    \begin{enumerate}
+        \item $f(0) \equiv 0^{p} \equiv 0\ (mod\ p)$
+        \item $f(1) \equiv 1^{p} \equiv 1\ (mod\ p)$
+        \item $\forall x, y \notin \{0, 1\}\ f(x + y) \equiv$ \[
+            \equiv (x + y)^{p} \equiv
+            x^{p} + {p \choose 1} x^{p-1}y^{1} + ... + {p \choose p - 1} x^{1}y^{p-1} + y^{p} \equiv
+        \]
+        \[
+            \equiv x^{p} + \frac{p!}{1!(p-1)!}x^{p-1}y^{1} + ... + \frac{p!}{(p-1)!1!}x^{1}y^{p-1} + y^{p} \equiv
+        \]
+        \[
+            \equiv x^{p} + y^{p} \equiv f(x) + f(y)\ (mod\ p)
+        \]
+        \item Т.к $f(x + y) \equiv f(x) + f(y)\ (mod\ p)$, то мы можем вычислить f для всех остальных x:
+        \begin{enumerate}
+            \item $f(2) \equiv f(1) + f(1) \equiv 1 + 1 \equiv 2\ (mod\ p)$
+            \item $f(3) \equiv f(2 + 1) \equiv f(2) + f(1) \equiv 2 + 1 \equiv 3\ (mod\ p)$
+            \item ...
+            \item $f(x) \equiv f((x - 1) + 1) \equiv x - 1 + 1 \equiv x\ (mod\ p)$
+        \end{enumerate}
+    \end{enumerate}
+    
+    \item Получаем, что $f(a) \equiv a^{p} \equiv a\ (mod\ p)$
+    \item Число $p$ - простое, поэтому все остатки по модулю $p$ взаимно просты с $p \Rightarrow \forall x\ \exists x^{-1}: x \cdot x^{-1} \equiv 1\ (mod\ p)$ (по критерию обратимости).
+    
+    \item Следовательно, $\exists a^{-1}: a^{-1} \cdot a \equiv 1\ (mod\ p)$
+    
+    \item \textit{Тогда используя эту лемму:} "Если $a \equiv b\ (mod\ m)$ и $c \equiv d\ (mod\ m)$, то $ac \equiv bd\ (mod\ m)$", получаем:
+    \begin{equation*}
+        \begin{cases}
+            a^{p} \equiv a\ (mod\ p) \\
+            a^{-1} \equiv a^{-1}\ (mod\ p)
+        \end{cases}
+        \begin{matrix}
+            \Rightarrow\ \ a^{p-1} \equiv 1\ (mod\ p)
+        \end{matrix}
+    \end{equation*}
+    
+\end{enumerate}
+
+\noindent
+$\blacksquare$
 
 \end{document}
