фикс треугольных свойств

--- a/dmath.tex
+++ b/dmath.tex
@@ -410,9 +410,9 @@ $$ где {n \choose k} - \textit{биномальный коэфиициент.
 \begin{itemize}
     \item $T(n, k) = {n \choose k}$
     \item Симметричность строк: T(n, k) = T(n, n - k), n - строка, k - столбец.
-    \item Возрастание чисел в первой половине строки: $T(n, i) < T (n, i + 1), 0 \leqslant i < n/2, i \in Z$
+    \item Возрастание чисел в первой половине строки: $T(n, i) \leqslant T (n, i + 1), 0 \leqslant i < n/2, i \in Z$
     \item $\sum_{k=0}^{n} T(n, k) = 2^n$
-    \item $\sum_{k=0}^{n} (-1)^k T(n, k) = 0$
+    \item $\sum_{k=0}^{n} (-1)^k T(n, k) = 0, n \neq 0$
 \end{itemize}
 
 \noindent
@@ -1075,10 +1075,11 @@ $\blacksquare$
 ===========Coming soon=============
 
 \parag{17.Критерий обратимости остатка (вычета) по модулю N.}
-\textbf{Теорема:} Число $x$ обратимо по модулю $n$ тогда и только тогда, когда НОД($x$, $n$) = 1.
+\textbf{Теорема:} Число $a$ обратимо по модулю $p$ тогда и только тогда, когда $a$ и $p$ взаимно просты, а именно наибольший общий делитель $a$ и $p$ равен единице.
 
 \noindent
-===========Coming soon=============
+\textit{Доказательство:}
+
 
 \parag{18. Малая теорема Ферма.}
 \textbf{Теорема:} Если $p$ — простое число и $a$ — целое число, не делящееся на $p$, то $a^{p-1} \equiv 1\ (mod\ p)$.
